# Mayday

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
compiler/: Cargo.toml
compiler/examples/: query_rustc_driver.rs  query_rustc_interface.rs
compiler/src/: collector.rs  driver.rs  main.rs  reporter.rs
compiler/src/queries/: hir.rs
mayday/: Cargo.toml
mayday/src/: cli.rs  main.rs
mayday/src/tool/: cli.rs  mod.rs
query_package/: Cargo.toml
query_package/examples/: query_rustc_driver.rs
query_package/src/: callbacks.rs  cli.rs  main.rs  queries.rs
query_package/src/compiler/: mod.rs
query_package/src/compiler/queries/: hir.rs
query_package/src/queries/: hir.rs
query_package/src/tool/: cli.rs  mod.rs
test_package/: Cargo.toml
test_package/examples/: playground.rs  query_rustc_driver.rs  query_rustc_interface.rs
test_package/src/: main.rs  playground.rs
unsafe_example/: Cargo.toml  HIR  HIR.hir  HIR_lib.hir  MIR.mir
unsafe_example/src/: lib.rs
